--- a/src/client/styles.css
+++ b/src/client/styles.css
@@ -6,6 +6,7 @@ body {
   font-family: "Helvetica Neue";
   font-size: 16px;
   font-weight: 200;
+  margin-top: 18px;
 }
 
 .card {
@@ -34,6 +35,7 @@ body {
 
 ul {
   height: 50px;
+  margin: 0;
 }
 
 li {
@@ -68,4 +70,12 @@ output {
 input {
   margin-top: 8px;
   margin-bottom: 20px;
+}
+.modal {
+  display: none;
+  position:fixed;
+  width:100%;
+  -webkit-box-shadow: 0px 6px 8px -4px rgba(0,0,0,0.15);
+  -moz-box-shadow: 0px 6px 8px -4px rgba(0,0,0,0.15);
+  box-shadow: 0px 6px 8px -4px rgba(0,0,0,0.15);
 }
